# free6

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  package.json  rustfmt.toml  tsconfig.json
database/: .env  Cargo.toml
database/migrations/: 20210228195417_CreateConfigs.sql
database/src/: lib.rs  main.rs
gateway/: Cargo.toml
gateway/src/: main.rs
lang/: core.ftl
lang/en/: main.ftl
leveling/: Cargo.toml
migrations/2021-02-15-220836_users/: up.sql
migrations/2021-02-16-070123_guilds/: down.sql  up.sql
slash_cmds/: package.json
slash_cmds/cmds/: stats.json
slash_cmds/src/: index.ts
src/: hooks.rs  main.rs  schema.rs
src/cmds/: meta.rs  mod.rs  xp.rs
src/db/: postgres.rs  redis.rs
src/models/: guild.rs  user.rs
src/util/: db.rs  mod.rs  xp.rs
