[package]
name = "free6"
version = "0.1.0"
authors = ["B <benricheson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serenity = "0.10.2"
tokio = { version = "1.2.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
