[package]
name = "gateway"
version = "0.1.0"
authors = ["B <benricheson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
lapin = "1.6.8"
redis = { version = "0.20.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
twilight-gateway = "0.3.2"
twilight-http = "0.3.4"
